# flightaware-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: cli.rs
