[package]
name = "flightaware-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
repository = "https://github.com/keltia/flightaware-rs"
license = "BSD2"
readme = "README.md"
keywords = ["Flightaware", "library", "REST-API", "client-library"]
description = "Rust library to access Flightaware aeronautical API."
categories = ["api-bindings" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["cargo", "derive"] }
home = "0.5"
regex = "1.5"
reqwest = { version = "0.11", features = ["socks", "blocking", "gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[dev.dependencies]
rstest = "0.13"
assert_cmd = "2.0"
